2005-10-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Works on Win32. (gladewin32 has been changed the 
	library names(xml2.lib, z.lib)?)

2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c, extconf.rb: Added GladeXML::BUILD_VERSION. 

2005-09-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* bin/ruby-glade-create-template: Remove pseudo GetText code.
	It moved to glib/src/lib/glib2.rb.
	Added "glade" accessor.
	* sample/l10n_gui.rb, l10n_main.rb, README: ditto, improved.
	* rbglade.c: Added GladeXML#get_widget_prefix, .get_widget_name,
	.get_widget_tree.

2005-08-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: GladeXML.new finds GETTEXT_PATH environment variable
	if the localedir is nil. If it's not set, then use system path
	(e.g. /usr/share/locale).

2005-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* bin/ruby-glade-create-template: Fix to output uniq signal handlers.
	Improved GetText.n_.

2005-02-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Support libintl.h on mswin32.
	* sample/makemo.rb: Support mswin32.
	* sample/l10n_main.rb: Fix a bug in ja locale.

2005-02-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Re-check libintl function again(ad-hoc).
	* sample/l10n_gui.rb, l10n_main.rb: 
	Rewrite from new ruby-glade-create-template.
	* bin/ruby-glade-create-template: Improved GetText support.
	* README: Updated.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix intl.h error on MSVC++.
	* rbglade.c: Remove to check libintl functions.
	
2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2005-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix compiling error on MSVC+.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/libglade2.rb: Support GLib::Log.set_log_domain.
	Define GladeXML::LOG_DOMAIN.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* rbglade.c: Added GladeXML#get_tooltips.