@@ -30,7 +30,7 @@ end
 if __FILE__ == $0
   # Set values as your own application. 
   PROG_PATH = "l10n.glade"
-  PROG_NAME = "YOUR_APPLICATION_NAME"
+  PROG_NAME = "l10n"
   Gtk.init
   L10nGlade.new(PROG_PATH, nil, PROG_NAME)
   Gtk.main
